# thesis

./: CMakeLists.txt  README.md  allocation.c  allocation.h  binary_search_tree_bucket.c  bucket.h  calculated_distribution_hash.c  debug.h  decoder.c  def.h  delta.c  encoder.c  equals.h  filereader.c  filereader.h  gamma.c  hash.h  hash_table_test.c  hashtable.c  hashtable.h  hashtabletest.c  item.h  linked_list_bucket.c  linked_log_test.c  logarithmic_distribution_hash.c  main.c  mem.c  mem.h  naivehashtable.c  report.h  small.txt  string.h  suffixtree.c  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test8.txt  (+6 more)
