cmake_minimum_required(VERSION 2.8.4)
project(thesis)

set(ENCODE_FILES encoder.c vec.c allocation.c)
set(DECODE_FILES decoder.c vec.c allocation.c)
set(GAMMA_ENCODE_FILES ${ENCODE_FILES} gamma.c)
set(DELTA_ENCODE_FILES ${ENCODE_FILES} delta.c)
set(GAMMA_DECODE_FILES ${DECODE_FILES} gamma.c)
set(DELTA_DECODE_FILES ${DECODE_FILES} delta.c)
set(NAIVE_HASH_FILES naivehashtable.c hashtabletest.c allocation.c)
set(UKKONEN_FILES suffixtree.c naivehashtable.c ukkonen.c allocation.c filereader.c)
add_executable(gamma-encode ${GAMMA_ENCODE_FILES})
target_link_libraries(gamma-encode m)
add_executable(delta-encode ${DELTA_ENCODE_FILES})
target_link_libraries(delta-encode m)
add_executable(gamma-decode ${GAMMA_DECODE_FILES})
target_link_libraries(gamma-decode m)
add_executable(delta-decode ${DELTA_DECODE_FILES})
target_link_libraries(delta-decode m)
add_executable(naive-hash ${NAIVE_HASH_FILES})
add_executable(ukkonen ${UKKONEN_FILES})