cmake_minimum_required(VERSION 2.8.4)
project(thesis)

set(ENCODE_FILES encoder.c vec.c allocation.c)
set(DECODE_FILES decoder.c vec.c allocation.c)
set(GAMMA_ENCODE_FILES ${ENCODE_FILES} gamma.c)
set(DELTA_ENCODE_FILES ${ENCODE_FILES} delta.c)
set(GAMMA_DECODE_FILES ${DECODE_FILES} gamma.c)
set(DELTA_DECODE_FILES ${DECODE_FILES} delta.c)
set(BASIC_HASH_FILES hashtable.c allocation.c)
set(LINKED_UNIFORM_FILES ${BASIC_HASH_FILES} linked_list_bucket.c uniform_distribution_hash.c)
set(LINKED_LOG_FILES ${BASIC_HASH_FILES} linked_list_bucket.c logarithmic_distribution_hash.c)
set(LINKED_UNIFORM_TEST_FILES hash_table_test.c ${LINKED_UNIFORM_FILES})
set(LINKED_LOG_TEST_FILES hash_table_test.c ${LINKED_LOG_FILES})
set(LINKED_LOG_UNIT_TEST_FILES linked_log_test.c ${LINKED_LOG_FILES})
set(UKKONEN_FILES suffixtree.c ukkonen.c allocation.c filereader.c ${LINKED_UNIFORM_FILES})
add_executable(gamma-encode ${GAMMA_ENCODE_FILES})
target_link_libraries(gamma-encode m)
add_executable(delta-encode ${DELTA_ENCODE_FILES})
target_link_libraries(delta-encode m)
add_executable(gamma-decode ${GAMMA_DECODE_FILES})
target_link_libraries(gamma-decode m)
add_executable(delta-decode ${DELTA_DECODE_FILES})
target_link_libraries(delta-decode m)
add_executable(linked-uniform-test ${LINKED_UNIFORM_TEST_FILES})
add_executable(linked-log-test ${LINKED_LOG_TEST_FILES})
add_executable(linked-log-unit-test ${LINKED_LOG_UNIT_TEST_FILES})
add_executable(ukkonen ${UKKONEN_FILES})